# COG

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Conventions.txt  Doxyfile  Event.h  GUI.h  Game.cpp  Game.h  IMG_bmp_loader.cpp  Image.cpp  Image.h  Images.cpp  Images.h  KeyboardEvent.cpp  KeyboardEvent.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Makefile.am  Makefile.am~  Makefile.in  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  MouseEvent.cpp  MouseEvent.h  ObjLoader - save.cpp  ObjLoader -save.h  ObjLoader.cpp  ObjLoader.h  (+62 more)
COG.xcodeproj/: project.pbxproj
COG.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
COG.xcodeproj/project.xcworkspace/xcuserdata/Vianney.xcuserdatad/: UserInterfaceState.xcuserstate
COG.xcodeproj/xcuserdata/Vianney.xcuserdatad/xcschemes/: COG.xcscheme  xcschememanagement.plist
Resources/: Makefile.am  Makefile.in
Resources/Sphere/: Sphere.object  sphere.mbf  sphere.mesh
Resources/Test files/: mountain.mtl  testPlane.mtl
Resources/Test files/PNM/: test_ASCII.ppm
Resources/Test_files/: Makefile.am  Makefile.in  Valid_images_format.txt  axe.mesh
Resources/Test_files/BMP/: Makefile.am  Makefile.in
Resources/Test_files/GIF/: Makefile.am  Makefile.in
Resources/Test_files/JPG/: Makefile.am  Makefile.in
Resources/Test_files/PNG/: Makefile.am  Makefile.in
Resources/Test_files/PNM/: Makefile.am  Makefile.in  test_BW_ASCII.pbm  test_Gray_Binary.pgm  test_RGB_ASCII.ppm  test_RGB_Binary.ppm
Resources/Test_files/TIF/: Makefile.am  Makefile.in  test_GrayA.tif  test_RGB.tif  test_RGBA_LZW.tif  test_RGBA_déflation.tif  test_RGBA_pack_bits.tif
Resources/materials/: ground.mtl
Resources/objects/: Makefile.am  Makefile.in
Resources/objects/Axe/: Axe.object  axe.fs  axe.vs
Resources/objects/House/: House.mbf  House.mesh  House.object
Resources/objects/Pyramide/: pyramide#.mbf  pyramide.mbf  pyramide.object  pyramide1.mbf  pyramide2.mbf  pyramide3.mbf
Resources/objects/Suzanne/: Suzanne.object  suzanne
Resources/objects/Torus/: Torus.object  down.mbf  down.mesh  left.mesh  right.mbf  right.mesh  up.mbf  up.mesh
Resources/objects/axe/: Makefile.am  Makefile.in  axe.mesh  axe.vShader
Resources/objects/house/: house.xml  house.xml~  material.xml
Resources/objects/mountain/: Makefile.am  Makefile.in  mountain.mesh  mountain.mtl  mountain.pShader  mountain.vShader
Resources/objects/test/: all.fs  all.mbf  all.mesh  all.vs  test.object
Resources/objects/testplane/: Makefile.am  Makefile.in
Resources/objects/texTest/: texTest.mbf  texTest.mesh  texTest.object
Resources/planet/: ground.vs  terre.mtl  verre.mtl  verre.vs
Resources/shaders/: Makefile.am  Makefile.in  base.fs  base.vs  machin.vs  shadow.pShader  shadow.vShader
Resources/test/PNM/: test_BW_Binary.pbm  test_Gray_ASCII.pgm
Resources/test/TIF/: test_Gray.tif  test_Palette.tif  test_RGBA_jpeg.tif  test_RGBA_no_compression.tif
Test files/: test.tif  test_ASCII_RGB.ppm
img test/: test_ASCII_Gray.pgm  test_Binary_Gray.pgm  test_Binary_RGB.ppm
