bin_PROGRAMS	= COG
COG_SOURCES	= Camera.cpp Component.cpp Game.cpp Light.cpp Logger.cpp	\
		  Mesh.cpp MeshManager.cpp Object.cpp ObjectManager.cpp		\
		  Shader.cpp ShaderManager.cpp Simulator.cpp Sphere.cpp		\
		  Texture.cpp TextureManager.cpp Univers.cpp Vvector.cpp	\
		  eventHandler.cpp main.cpp utilities.cpp stb_image.c		\
		  								\
		  Camera.h Component.h Game.h Light.h Logger.h Mesh.h		\
		  MeshManager.h Object.h ObjectManager.h Shader.h		\
		  ShaderManager.h Simulator.h Sphere.h Texture.h		\
		  TextureManager.h Univers.h Vvector.h config.h eventHandler.h	\
		  opengl.h stb_image.h utilities.h

datadir		= $(datarootdir)/@PACKAGE@
nobase_dist_data_DATA =	Resources/fichier_2_objects.obj				\
			Resources/Test_files/objectTest.png			\
			Resources/Test_files/cube.obj				\
			Resources/Test_files/PNM/test_RGB_ASCII.ppm		\
			Resources/Test_files/PNM/test_RGB_Binary.ppm		\
			Resources/Test_files/PNM/test_Gray_ASCII.pgm		\
			Resources/Test_files/PNM/test_BW_ASCII.pbm		\
			Resources/Test_files/PNM/test_ASCII.ppm			\
			Resources/Test_files/PNM/test_Gray_Binary.pgm		\
			Resources/Test_files/PNM/test_BW_Binary.pbm		\
			Resources/Test_files/Mountain3.obj			\
			Resources/Test_files/Mountain3.png			\
			Resources/Test_files/objectTest.mtl			\
			Resources/Test_files/Mountain3.mtl			\
			Resources/Test_files/BMP/test_Web.bmp			\
			Resources/Test_files/BMP/test_BW.bmp			\
			Resources/Test_files/BMP/test_Palette.bmp		\
			Resources/Test_files/BMP/test_ARGB.bmp			\
			Resources/Test_files/BMP/test_RGB_6.bmp			\
			Resources/Test_files/BMP/test_RGB_3.bmp			\
			Resources/Test_files/BMP/test_Gray.bmp			\
			Resources/Test_files/BMP/test_RGB_0.bmp			\
			Resources/Test_files/BMP/test_XRGB.bmp			\
			Resources/Test_files/BMP/test_RGB_2.bmp			\
			Resources/Test_files/BMP/test_RGB_5.bmp			\
			Resources/Test_files/BMP/test_RGB_4.bmp			\
			Resources/Test_files/BMP/test_RGB_1.bmp			\
			Resources/Test_files/Mountain3c.obj			\
			Resources/Test_files/Mountain3c.mtl			\
			Resources/Test_files/Mountain3_AO.png			\
			Resources/Test_files/Mountain3d.obj			\
			Resources/Test_files/cube.mtl				\
			Resources/Test_files/objectTest.obj			\
			Resources/Test_files/Mountain3_5.png			\
			Resources/Test_files/axe.mesh				\
			Resources/Test_files/mountain2.obj			\
			Resources/Test_files/cube.png				\
			Resources/Test_files/JPG/test_RGB_2.jpg			\
			Resources/Test_files/JPG/test_RGB_fast_integer.jpg	\
			Resources/Test_files/JPG/test_RGB_floating_point.jpg	\
			Resources/Test_files/JPG/test_RGB_3.jpg			\
			Resources/Test_files/JPG/test_RGB_1.jpg			\
			Resources/Test_files/JPG/test_RGB_bad_quality.jpg	\
			Resources/Test_files/JPG/test_RGB_4.jpg			\
			Resources/Test_files/JPG/test_Gray.jpg			\
			Resources/Test_files/JPG/test_Palette.jpg		\
			Resources/Test_files/axe.png				\
			Resources/Test_files/Mountain3b.mtl			\
			Resources/Test_files/Valid_images_format.txt		\
			Resources/Test_files/PNG/test_PaletteA.png		\
			Resources/Test_files/PNG/test_GrayA.png			\
			Resources/Test_files/PNG/test_RGB.png			\
			Resources/Test_files/PNG/test_Gray.png			\
			Resources/Test_files/PNG/test_RGB_no_compression.png	\
			Resources/Test_files/PNG/test_RGBA.png			\
			Resources/Test_files/PNG/test_RGBA_offset_layer.png	\
			Resources/Test_files/PNG/test_Palette.png		\
			Resources/Test_files/PNG/test_RGBA_interlacing.png	\
			Resources/Test_files/PNG/test_RGBA_no_alpha.png		\
			Resources/Test_files/PNG/test_RGBA_gamma.png		\
			Resources/Test_files/Mountain3b.obj			\
			Resources/Test_files/Mountain3d.mtl			\
			Resources/Test_files/GIF/test_RGB.gif			\
			Resources/Test_files/GIF/test_PaletteA.gif		\
			Resources/Test_files/GIF/test_Gray.gif			\
			Resources/Test_files/GIF/test_RGBA.gif			\
			Resources/Test_files/GIF/test_Palette.gif		\
			Resources/Test_files/GIF/test_GrayA.gif			\
			Resources/Test_files/mountain2.mtl			\
			Resources/Test_files/plane.jpg				\
			Resources/Test_files/TIF/test_Gray.tif			\
			Resources/Test_files/TIF/test_RGBA_déflation.tif	\
			Resources/Test_files/TIF/test_RGBA_LZW.tif		\
			Resources/Test_files/TIF/test_RGB.tif			\
			Resources/Test_files/TIF/test_GrayA.tif			\
			Resources/Test_files/TIF/test_Palette.tif		\
			Resources/Test_files/TIF/test_RGBA_pack_bits.tif	\
			Resources/Test_files/TIF/test_RGBA_jpeg.tif		\
			Resources/Test_files/TIF/test_RGBA_no_compression.tif	\
			Resources/Test_files/plane.obj				\
			Resources/shaders/shadow.test				\
			Resources/objects/axe/axe.pShader			\
			Resources/objects/axe/axe.vShader			\
			Resources/objects/axe/axe.mesh				\
			Resources/objects/axe/axe.png				\
			Resources/objects/mountain/mountain.mtl			\
			Resources/objects/mountain/mountain.mesh		\
			Resources/objects/mountain/mountain.vShader		\
			Resources/objects/mountain/mountain.obj			\
			Resources/objects/mountain/mountain.pShader		\
			Resources/objects/mountain/mountain.png			\
			Resources/objects/testplane/testplane.vShader		\
			Resources/objects/testplane/testplane.png		\
			Resources/objects/testplane/testplane.pShader		\
			Resources/objects/testplane/testplane.obj		\
			Resources/game_icon.bmp
