SUBDIRS		= BMP GIF JPG PNG PNM TIF
COG_DATA	= Mountain3.mtl Mountain3.obj Mountain3.png Mountain3_5.png Mountain3_AO.png Mountain3b.mtl Mountain3b.obj Mountain3c.mtl Mountain3c.obj Mountain3d.mtl Mountain3d.obj Valid_images_format.txt axe.mesh axe.png cube.mtl cube.obj cube.png mountain2.mtl mountain2.obj objectTest.mtl objectTest.obj objectTest.png plane.jpg plane.obj
COGdir		= "$(datadir)/@PACKAGE@/Resources/Test_files"
